# falcon-url-checker

./: Dockerfile  MANIFEST.in  README.md  env.example  pyproject.toml  requirements.txt  run.py
app/: __init__.py  errors.py  routing.py
app/adapters/: dns_adapter.py  http_adapter.py  ports_adapter.py  ssl_adapter.py  web_assets_adapter.py
app/middleware/: __init__.py  cors.py  request_logger.py
app/openapi/: __init__.py  openapi.yaml
app/resources/: base.py  domain_check.py  health.py  openapi_docs.py
app/schemas/: domain_inspection.py
app/services/: domain_inspection.py
app/validators/: domain.py
config/: settings.py
static/swagger/: swagger-initializer.js
templates/: redoc.html  swagger_index.html
tests/: test_domain_check.py  test_health.py  test_openapi_docs.py
